--- a/templates/index.html
+++ b/templates/index.html
@@ -1,4 +1,9 @@
 {% extends "layout.html" %}
+{% import "macros/chat-list.html" as macros %}
 
-<div>Hello chat</div>
+{% block body %}
+<div>
+  {{ macros::ChatList(chat_list=chat_list) }}
+</div>
+{% endblock body %}
 
