--- a/templates/layout.html
+++ b/templates/layout.html
@@ -6,7 +6,7 @@
     <script src="https://cdn.tailwindcss.com?plugins=forms,typography,aspect-ratio"></script>
   </head>
 
-  <body>
+  <body class="p-2">
     {% block body %}{% endblock body %}
   </body>
 </html>
