feat: render chat messages

--- a/templates/index.html
+++ b/templates/index.html
@@ -1,5 +1,5 @@
 {% extends "layout.html" %}
-{% import "macros/chat-list.html" as macros %}
+{% import "macros.html" as macros %}
 
 {% block body %}
 <main class="md:grid grid-cols-3">
